# file-transfer-using-sockets

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
client/: client.c  client.h  main.c
server/: main.c  server.c  server.h
